Add REST to create agreements from templates
