# app.go
@@ -16,6 +16,7 @@ limitations under the License.
 package main
 
 import (
+	"SLALite/generator"
 	"SLALite/model"
 	"SLALite/utils"
 	"encoding/json"
@@ -52,6 +53,7 @@ type App struct {
 	SslCertPath string
 	SslKeyPath  string
 	externalIDs bool
+	validator   model.Validator
 }
 
 // ApiError is the struct sent to client on errors
@@ -83,7 +85,7 @@ var api = map[string]endpoint{
 	"templates":  endpoint{"GET", "/templates", "Templates"},
 }
 
-func NewApp(config *viper.Viper, repository model.IRepository) (App, error) {
+func NewApp(config *viper.Viper, repository model.IRepository, validator model.Validator) (App, error) {
 
 	setDefaults(config)
 	logConfig(config)
@@ -94,6 +96,7 @@ func NewApp(config *viper.Viper, repository model.IRepository) (App, error) {
 		SslCertPath: config.GetString(sslCertPathPropertyName),
 		SslKeyPath:  config.GetString(sslKeyPathPropertyName),
 		externalIDs: config.GetBool(utils.ExternalIDsPropertyName),
+		validator:   validator,
 	}
 
 	a.initialize(repository)
@@ -153,6 +156,9 @@ func (a *App) initialize(repository model.IRepository) {
 	a.Router.Methods("GET").Path("/templates").Handler(logger(a.GetTemplates))
 	a.Router.Methods("GET").Path("/templates/{id}").Handler(logger(a.GetTemplate))
 	a.Router.Methods("POST").Path("/templates").Handler(logger(a.CreateTemplate))
+
+	a.Router.Methods("POST").Path("/create-agreement").Handler(logger(a.CreateAgreementFromTemplate))
+
 }
 
 // Run starts the REST API
@@ -673,6 +679,76 @@ func (a *App) CreateTemplate(w http.ResponseWriter, r *http.Request) {
 		})
 }
 
+// CreateAgreementFromTemplate generates an agreement from a template and parameters
+//
+// swagger:operation POST /create-agreement createAgreementFromTemplate
+//
+// Creates an agreement from a template; templateId is the templateID to base the
+// agreement from; agreementID is an output field, containing the ID of the created
+// and stored agreement; parameters must contain a property for each placeholder to
+// be substituted in the template.
+//
+// ---
+// produces:
+// - application/json
+// consumes:
+// - application/json
+// parameters:
+// - name: createAgreement
+//   in: body
+//   description: Parameters to create an agreement from a template
+//   required: true
+//   schema:
+//     "$ref": "#/definitions/CreateAgreement"
+// responses:
+//   '200':
+//     description: The response contains the ID of the created agreement
+//     schema:
+//       "$ref": "#/definitions/CreateAgreement"
+//   '400' :
+//     description: Not all template placeholders were substituted
+//   '404' :
+//     description: Not found the TemplateID to create the agreement from
+func (a *App) CreateAgreementFromTemplate(w http.ResponseWriter, r *http.Request) {
+
+	var in model.CreateAgreement
+	var t *model.Template
+	var ag *model.Agreement
+
+	a.create(w, r,
+		func() error {
+			return json.NewDecoder(r.Body).Decode(&in)
+		},
+		func() (model.Identity, error) {
+			var err error
+
+			t, err = a.Repository.GetTemplate(in.TemplateID)
+			if err != nil {
+				return nil, err
+			}
+
+			genmodel := generator.Model{
+				Template:  *t,
+				Variables: in.Parameters,
+			}
+
+			ag, err = generator.Do(&genmodel, a.validator, a.externalIDs)
+			if err != nil {
+				return nil, err
+			}
+
+			ag, err = a.Repository.CreateAgreement(ag)
+			if err != nil {
+				return nil, err
+			}
+
+			out := in
+			out.AgreementID = ag.Id
+
+			return &out, nil
+		})
+}
+
 func manageError(err error, w http.ResponseWriter) {
 	switch err {
 	case model.ErrAlreadyExist:
@@ -680,7 +756,7 @@ func manageError(err error, w http.ResponseWriter) {
 	case model.ErrNotFound:
 		respondWithError(w, http.StatusNotFound, "Can't find object")
 	default:
-		if model.IsErrValidation(err) {
+		if model.IsErrValidation(err) || generator.IsErrUnreplaced(err) {
 			respondWithError(w, http.StatusBadRequest, err.Error())
 		} else {
 			respondWithError(w, http.StatusInternalServerError, err.Error())
